--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
     <title>Document</title>
-
 </head>
 <body>
+ <div class="page">
 
+ </div>
 </body>
 </html>
