--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
  <div class="page">
-
+  <header class="header">
+    <div class="logo"></div>
+    <a class="header__lang-link" href="#">En</a>
+    <a class="header__lang-link" href="#">Es</a>
+  </header>
  </div>
 </body>
 </html>
