--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h2 class="place__title">Maine</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a>
+        <a class="place__link" href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1" target="_blank">global.llbean.com</a>
       </div>
       <img class="place__image" src="./images/place-maine.jpg" alt="Maine">
       <div class="place__paragraph-container">
@@ -69,7 +69,7 @@
       <h2 class="place__title">New Hampshire</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="https://www.timberland.com/timberland">timberland.com</a>
+        <a class="place__link" href="https://www.timberland.com/timberland" target="_blank">timberland.com</a>
       </div>
       <img class="place__image" src="./images/place-new-hampshire.jpg" alt="New Hampshire">
       <div class="place__paragraph-container">
@@ -82,7 +82,7 @@
       <h2 class="place__title">New York</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="https://www.ge.com/about-us">ge.com</a>
+        <a class="place__link" href="https://www.ge.com/about-us" target="_blank">ge.com</a>
       </div>
       <img class="place__image" src="./images/place-new-york.jpg" alt="New York">
       <div class="place__paragraph-container">
@@ -94,7 +94,7 @@
       <h2 class="place__title">Erie, PA</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="https://www.fws.gov/refuge/erie">fws.gov</a>
+        <a class="place__link" href="https://www.fws.gov/refuge/erie" target="_blank">fws.gov</a>
       </div>
       <img class="place__image" src="./images/place-pennsylvania.jpg" alt="Pennsylvania">
       <div class="place__paragraph-container">
@@ -107,7 +107,7 @@
       <h2 class="place__title">Ohio</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
-        <a class="place__link" href="https://www.cedarpoint.com">cedarpoint.com</a>
+        <a class="place__link" href="https://www.cedarpoint.com" target="_blank">cedarpoint.com</a>
       </div>
       <img class="place__image" src="./images/place-ohio.jpg" alt="Ohio">
       <div class="place__paragraph-container">
@@ -116,6 +116,22 @@
       </div>
     </article>
   </section>
+  <section class="cover">
+    <div class="cover__overlay">
+      <a class="cover__link" href="https://www.nps.gov/subjects/travelroute66/index.htm" target="_blank">
+        <h2 class="cover__title">Historic Route 66</h2>
+        <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
+      </a>
+    </div>
+    </section>
+    <footer class="footer">
+      <ul class="footer__nav">
+        <li><a class="footer__nav-link" href="https://yandex.com/maps" target="_blank">Maps</a></li>
+        <li><a class="footer__nav-link" href="https://yandex.com/weather/moscow" target="_blank">Weather</a></li>
+        <li><a class="footer__nav-link" href="https://calendar.yandex.ru" target="_blank">Calendar</a></li>
+      </ul>
+      <p class="footer__copyright">© 2021. Shir Morel</p>
+    </footer>
  </div>
 </body>
 </html>
