--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
     </div>
     </section>
     <footer class="footer">
-      <ul class="footer__nav">
-        <li><a class="footer__nav-link" href="https://yandex.com/maps" target="_blank">Maps</a></li>
-        <li><a class="footer__nav-link" href="https://yandex.com/weather/moscow" target="_blank">Weather</a></li>
-        <li><a class="footer__nav-link" href="https://calendar.yandex.ru" target="_blank">Calendar</a></li>
-      </ul>
-      <p class="footer__copyright">© 2021. Shir Morel</p>
+      <nav class="footer__nav">
+        <a class="footer__nav-link" href="https://yandex.com/maps" target="_blank">Maps</a>
+        <a class="footer__nav-link" href="https://yandex.com/weather/moscow" target="_blank">Weather</a>
+        <a class="footer__nav-link" href="https://calendar.yandex.ru" target="_blank">Calendar</a>
+      </nav>
+      <p class="footer__copyright">&copy; 2021. Shir Morel</p>
     </footer>
  </div>
 </body>
